--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@
 body{
     font-family:Arial, Helvetica, sans-serif;
     background-image: url('backgroundimg.JPEG');
+    display:flex;
+    border:10px solid rgb(197, 0, 0);
+    border-radius: 30px;
+    margin:80px;
+    padding:10px
 }
+
 
 .intro {
     color:white;text-shadow:.3px .3px 0 rgba(0, 0, 0, 0.5);
@@ -12,7 +18,7 @@ body{
 }
 .intro h1{
     font-size:95px;
-    background-color: rgb(232, 110, 16);
+    background-color: rgb(232, 16, 128);
     text-shadow:1px 1px 0 rgba(0,0,0,0.5);
     border-radius:30px;
 }
@@ -21,12 +27,16 @@ p {
 color:white;
 text-shadow:.3px .3px 0 rgba(0, 0, 0, 0.5);
 text-align:center;
-font-size:20px
+font-size:30px
 }
-
 a {
     list-style-type:none;
     text-decoration:none;
     color:white;
     text-shadow:.3px .3px 0 rgba(0, 0, 0, 0.5);
+}
+ 
+div.preamble {
+    display:flex;
+    align-items:center;
 }
