--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     padding:10px;
     background-repeat: no-repeat;
     background-size:cover;
+    min-width: fit-content;
 }
 
 
@@ -23,13 +24,12 @@ body{
     background-color: rgb(232, 16, 128);
     text-shadow:1px 1px 0 rgba(0,0,0,0.5);
     border-radius:30px;
-    display:inline-block
+    display:inline-block;
 }
 
 p {
 color:white;
 text-shadow:.3px .3px 0 rgba(0, 0, 0, 0.5);
-text-align:center;
 font-size:30px
 }
 a {
@@ -40,10 +40,46 @@ a {
 }
  
 .preamble {
-    display:flex;
-    flex-flow: row wrap;
+    display:grid;
+    grid-template-columns:repeat(4, 25%);
+    
+}
+.preamble > p:first-of-type{
+    margin-right: 10em;
+    position: relative;
+}
+
+.preamble > p:first-of-type::after {
+    display: flex;
+
+    content: "";
+    background: url('sunrise.jpg');
+    background-size: cover;
+    height:400px;
+    width:500px;
+    background-color: red;
+    width: 6em;
+    position: absolute;
+    left: 6em;
+    top:0
+
 }
 
 a:visited {
     color:beige;
 }
+
+h3.article {
+text-align: center;
+}
+
+.participation, .explanation {
+    text-align: center;
+    justify-content: center;
+}
+
+.preamble > h3 {
+    font-size: 50px;;
+}
+
+
