--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
     text-shadow:1px 1px 0 rgba(0,0,0,0.5);
     border-radius:30px;
     display:inline-block;
+    padding:0 20px;
 }
 
 p {
@@ -40,31 +41,35 @@ a {
 }
  
 .preamble {
-    display:grid;
-    grid-template-columns:repeat(4, 25%);
-    
+    display:flex;
+
 }
+   
 .preamble > p:first-of-type{
     margin-right: 10em;
     position: relative;
 }
 
 .preamble > p:first-of-type::after {
-    display: flex;
-
+    display:block;
     content: "";
     background: url('sunrise.jpg');
+    background-size: 1000px;
     background-size: cover;
-    height:400px;
-    width:500px;
-    background-color: red;
+    background-repeat: no-repeat;
+    height:100px;
+    margin: 0 19em;
+    min-width: fit-content;
+    align-items: center;
+   
+   
     width: 6em;
     position: absolute;
     left: 6em;
     top:0
 
 }
-
+.preamble > p 
 a:visited {
     color:beige;
 }
@@ -77,9 +82,9 @@ text-align: center;
     text-align: center;
     justify-content: center;
 }
-
+    
 .preamble > h3 {
-    font-size: 50px;;
+    font-size: 50px;
 }
 
 
