CSS Adjustments from 10/2/25 Morning

--- a/style.css
+++ b/style.css
@@ -118,3 +118,9 @@ p::first-letter {
     margin-right:30em;
     margin-top: 2em;
 }
+
+#zen-requirements::after {
+    content: "";
+    display: block;
+    clear: both;
+}
