--- a/style.css
+++ b/style.css
@@ -102,8 +102,7 @@ div, h3 {
 }
 
 p::first-letter {
-    font-style:italic;
-    font-size:110%;
+    font-size:120%;
     text-shadow:.3px .3px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -117,10 +116,23 @@ p::first-letter {
     text-align:left;
     margin-right:30em;
     margin-top: 2em;
+    margin-left:0.8em;
 }
 
 #zen-requirements::after {
     content: "";
     display: block;
     clear: both;
+}
+
+:hover {
+    color:lightskyblue
+}
+
+:root {
+background-color:lightcoral;
+margin-left: -2.5em;
+margin-right:-2.5em;
+margin-top:-2.5em;
+margin-bottom: -2.5em;
 }
