--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     min-width: fit-content;
+    position:relative;
 }
 
 .intro h2 {
     margin-top:10px;
     margin-bottom:10px;
     font-size:40px;
+}
+
+div[role="article"]{
+    
 }
 
 .intro {
@@ -162,6 +167,22 @@ margin-left:26em;
     margin-right:30em;
     margin-top: 2em;
     margin-left:0.8em;
+    position:relative;
+}
+
+#zen-requirements::before {
+background-image: url('DJI_20250128171750_0090_D.JPG');
+content:"";
+    border-radius:30px;
+    border:10px solid rgb(197, 0, 0);
+    height:830px;
+    width:730px;
+    display:block;
+    position:absolute;
+    background-size:cover;
+    top:0px;
+    right:0%;
+    transform:translateX(calc(100% + 15rem));
 }
 
 #zen-requirements::after {
@@ -189,6 +210,7 @@ margin-bottom: -2.5em;
 
 * {
     box-sizing: border-box;
+    overflow-x: visible;
 }
 
 .extra1 {
@@ -240,20 +262,13 @@ margin-bottom: -2.5em;
     position:absolute;
     background-size:cover;
     top:520px;
-    left:1010px
+    margin:auto;
+    left:50%;
+    transform:translateX(-50%);
 }
 
 .extra5 {
-    background-image: url('DJI_20250128171750_0090_D.JPG');
-    border-radius:30px;
-    border:10px solid rgb(197, 0, 0);
-    height:830px;
-    width:730px;
-    display:block;
-    position:absolute;
-    background-size:cover;
-    top:2550px;
-    left:1500px;
+    
 }
 
 h1::selection {
